misapps/apps/area1/app1/overlays/produccion/patch_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name: app1-container
        image: quay.io/amarti43_lord/demos/nginx-hola-mundo:v1
