misapps/apps/area1/app1/overlays/produccion/patch_route_host.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app1-route
spec:
  host: app1-produccion.apps.ocp.local
